# atskit

./: .gitignore  LICENSE  README.md  example.db  pyproject.toml
.github/workflows/: ci.yml  publish.yml
atskit/: __init__.py  cli.py  config.py  discover.py  http.py  models.py  persistence.py  portal_map.py  registry.py  service.py  url.py
atskit/ats/: __init__.py  amazon.py  american_express.py  apple.py  ashby.py  base.py  gem.py  greenhouse.py  lever.py  microsoft.py  workday.py
docs/: README.md  adding-an-ats.md  api.md  architecture.md  cli.md  database.md  getting-started.md  http-and-rate-limits.md  portals.md  publishing.md
scripts/: bump_version.py
tests/: test_amazon.py  test_american_express.py  test_apple.py  test_ats_greenhouse.py  test_discover_streaming.py  test_microsoft.py  test_portal_status.py  test_url.py  test_workday.py
